--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-gfdgfgfgfgfdgffj
-gdhfgdhfd
+<DOCTYPE html>
+<html>
+<head>
+	<title>WebProgramozás I beadandó </title>
+	<link rel="stylesheet" href="css/styles.css">
+<head>
+<body>
+</body>
+</html>
