--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>WebProgramozás I beadandó </title>
 	<link rel="stylesheet" href="css/styles.css">
+	<!-- komm -->
 <head>
 <body>
 </body>
