--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
 	<!-- komm -->
 <head>
 <body>
+	<header>
+	<nav class=menu>
+		<ul>
+			<li><a href="https://www.tutorialrepublic.com">Home</a></li>
+			<li><a href="https://www.tutorialrepublic.com/about-us.php">About</a></li>
+			<li><a href="https://www.tutorialrepublic.com/contact-us.php">Contact</a></li>
+		</ul>
+	</nav>
+	</header>
+	<footer>
+	<footer>
+
 </body>
 </html>
